<resources>
    <string name="app_name">Alleviate</string>

    <string name="title_journal">Journal</string>
    <string name="title_relief">Relief</string>
    <string name="title_settings">Settings</string>

    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="day_sunday">Sun</string>

    <string name="fab_snackbar_alert">A relief session was started on your smart watch.</string>
    <string name="fab_snackbar_error">Unable to connect to your smart watch.</string>

    <string name="stress_text">Stress Level</string>
    <string name="stress_units">%</string>
    <string name="alleviated_text">Alleviated</string>
    <string name="alleviated_units">day(s)</string>
    <string name="heart_text">Heart Rate</string>
    <string name="heart_units">bpm</string>
    <string name="pressure_text">Blood Pressure</string>
    <string name="agitation_text">Agitation Level</string>
    <string name="agitation_units">%</string>

    <string name="weekly_statistics_title">Weekly Statistics</string>
    <string name="weekly_statistics_heart">Average Daily Heart Rate</string>
    <string name="weekly_statistics_agitation">Average Daily Agitation</string>
    <string name="breathing_chip">Breathing</string>
    <string name="grounding_chip">Grounding</string>
    <string name="meditation_chip">Meditation</string>
    <string name="header_relief">Time to Relax</string>

    <string name="settings_title">Settings</string>
    <string name="settings_metrics">Metrics</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_age">Age</string>
    <string name="settings_age_modal">Update your birthday</string>
    <string name="settings_sex">Sex</string>
    <string name="settings_sex_modal">Update your sex</string>
    <string name="settings_weight">Weight</string>
    <string name="settings_weight_modal">Update your weight</string>
    <string name="settings_height">Height</string>
    <string name="settings_height_modal">Update your height</string>
    <string name="settings_relief_method">Primary Relief Method</string>
    <string name="settings_relief_method_modal">Update your primary relief method</string>
    <string name="settings_emergency_contact">Emergency Contact</string>
    <string name="settings_emergency_contact_modal">Update your emergency contact</string>
    <string name="settings_notify_contact">Notify Contact</string>
    <string name="settings_notify_contact_hint">Notify your emergency contact when an anxiety attack is detected</string>
    <string name="settings_share_location">Share Location</string>
    <string name="settings_share_location_hint">Share your current location with your emergency contact in case of a panic attack</string>

    <string name="settings_modal_set">Set</string>
    <string name="settings_modal_cancel">Cancel</string>
</resources>