<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_journal">

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.concordia.alleviate.ui.home.HomeFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_relief"
        android:name="com.concordia.alleviate.ui.dashboard.DashboardFragment"
        android:label="@string/title_relief"
        tools:layout="@layout/fragment_relief" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.concordia.alleviate.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>